--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -175,6 +175,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
+        android:text="Select a Category"
         android:background="@drawable/rounded_frame_background_yellow"
         app:layout_constraintTop_toBottomOf="@+id/txtCategoryBill"
         app:layout_constraintStart_toStartOf="@+id/guidelineStart"
