--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -355,7 +355,7 @@
             android:id="@+id/tvTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total net savings"
+            android:text="Total Net Savings"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
