--- a/app/src/main/res/layout/item_month_header.xml
+++ b/app/src/main/res/layout/item_month_header.xml
@@ -13,5 +13,5 @@
         android:layout_margin="16dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:textColor="#000000"/>
 </androidx.cardview.widget.CardView>
