--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -184,4 +184,25 @@
         <item>Inheritances and gifts</item>
         <item>Crowdfunding/Crowdinvesting returns</item>
     </string-array>
+
+    <!-- Savings Target Names -->
+    <string-array name="savings_target_names">
+        <item>Emergency Fund</item>
+        <item>Vacation</item>
+        <item>Home Down Payment</item>
+        <item>Car Purchase</item>
+        <item>Education Fund</item>
+        <item>Retirement</item>
+        <item>Wedding</item>
+        <item>Investment</item>
+    </string-array>
+
+    <!-- Target Period Options -->
+    <string-array name="target_period_options">
+        <item>1 Month</item>
+        <item>2 Months</item>
+        <item>3 Months</item>
+        <item>6 Months</item>
+        <item>12 Months</item>
+    </string-array>
 </resources>
