--- a/app/src/main/res/layout/dialog_welcome.xml
+++ b/app/src/main/res/layout/dialog_welcome.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="16dp"
             android:gravity="center"
             android:text="Welcome to SmartStack Solutions"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <!-- Icon with background -->
