--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -6,7 +6,8 @@
         android:icon="@drawable/baseline_home_24"/>
     <item android:title="Open Payments"
         android:id="@+id/Bills"
-        android:icon="@drawable/baseline_spendings_24"/>
+        android:icon="@drawable/baseline_spendings_24"
+        android:tint="@null"/>
     <item android:title="Closed Payments"
         android:id="@+id/Spendings"
         android:icon="@drawable/ic_closedpayment"/>
