--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -195,6 +195,7 @@
         <item>Retirement</item>
         <item>Wedding</item>
         <item>Investment</item>
+        <item>No specific reason</item>
     </string-array>
 
     <!-- Target Period Options -->
