--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -385,16 +385,15 @@
                 android:layout_marginEnd="16dp"/>
 
             <!-- Set Saving Target TextView and EditText -->
-            <Button
+            <TextView
                 android:id="@+id/tvSetSavingTarget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Set Saving Target"
+                android:text="Saving Target"
                 android:textSize="16sp"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:backgroundTint="@color/orange"
-                app:cornerRadius="8dp"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTotal"
                 android:layout_marginStart="16dp"
@@ -404,22 +403,19 @@
                 android:onClick="openSavingsDialog" />
 
 
-            <TextView
+            <EditText
                 android:id="@+id/etMonthlySavings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:backgroundTint="@color/orange"
-                android:background="@drawable/rounded_button_background"
-                android:textColor="@android:color/white"
-                android:gravity="center"
-                app:cornerRadius="8dp"
+                android:textColor="@android:color/black"
+                android:inputType="none"
+                android:focusable="false"
+                android:hint="+0.00"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvSetSavingTarget"
-                android:layout_marginEnd="16dp"
-                android:padding="8dp"
-                android:text="0.00" />
+                android:layout_marginEnd="16dp" />
 
 
             <!-- Target Achieved TextView and ProgressBar -->
